platforms/clusters/services/flux-sources/helm/gitea.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gitea
  namespace: gitea
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: gitea.services.mydomain.com
    tls:
      secretName: gitea-tls
  routes:
  - services:
    - name: gitea
      port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: gitea-ssh.services.mydomain.com
    tls:
      secretName: gitea-ssh-tls
  routes:
  - services:
    - name: gitea
      port: 22
