platforms/clusters/services/flux-sources/helm/gitlab.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: gitlab
  namespace: gitlab
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: gitlab.services.mydomain.com
    tls:
      secretName: gitlab-tls
  routes:
  - services:
    - name: gitlab-webservice-default
      port: 8181
    enableWebsockets: true
    permitInsecure: true
