platforms/clusters/services/flux-sources/helm/jenkins.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: jenkins.services.mydomain.com
    tls:
      secretName: jenkins-tls
  routes:
    - services:
        - name: jenkins
          port: 8080
      conditions:
        - prefix: /
