platforms/clusters/services/flux-sources/helm/keycloak.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
  namespace: auth
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: keycloak.services.mydomain.com
    tls:
      secretName: keycloak-tls
  routes:
  - services:
    - name: keycloak
      port: 80
