platforms/clusters/services/flux-sources/helm/minio.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-console
  namespace: minio
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: minio-console.services.mydomain.com
    tls:
      secretName: minio-tls
  routes:
  - services:
    - name: minio
      port: 9000
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-insecure
  namespace: minio
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: minio-insecure.services.mydomain.com
  routes:
  - services:
    - name: minio
      port: 9000
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-api
  namespace: minio
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: minio.services.mydomain.com
    tls:
      secretName: minio-tls
  routes:
  - services:
    - name: minio
      port: 9001
