platforms/clusters/services/flux-sources/helm/nexus.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nexus
  namespace: nexus
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: nexus.services.mydomain.com
    tls:
      secretName: nexus-tls
  routes:
  - services:
    - name: nexus-nexus-repository-manager
      port: 8081
