platforms/clusters/services/flux-sources/helm/sonar.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: sonar
  namespace: sonar
spec:
  ingressClassName: contour
  virtualhost:
    fqdn: sonar.services.mydomain.com
    tls:
      secretName: sonar-tls
  routes:
  - services:
    - name: sonar
      port: 80
